--- a/cards-qa.yml
+++ b/cards-qa.yml
@@ -7,7 +7,7 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to EazyBank cards related Quality Assurance APIs "
+  message: "Welcome to EazyBank cards related Quality  APIs "
   contactDetails:
     name: "Cherryl Pankaj - QA Lead"
     email: "cherryl@eazybank.com"
